--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -32,6 +32,7 @@
 @import 'partials/follow-us';
 @import 'partials/footer';
 @import 'partials/header';
+@import 'partials/main';
 @import 'partials/nav';
 @import 'partials/note';
 @import 'partials/sidebar';
