--- a/themes/habitat/assets/styles/partials/_tabs.scss
+++ b/themes/habitat/assets/styles/partials/_tabs.scss
@@ -1,5 +1,10 @@
 .tabs {
-	border-bottom: 3px solid $color-brand-blue;
+	border-left: 3px solid $color-brand-blue;
+
+	@include media-lg {
+		border-left: unset;
+		border-bottom: 3px solid $color-brand-blue;
+	}
 
 	ul,
 	li,
@@ -9,14 +14,20 @@
 	}
 
 	ul {
-		display: flex;
-		list-style: none;
+		@include media-lg {
+			display: flex;
+			flex-flow: row nowrap;
+		}
 	}
 
 	a,
 	strong {
-		padding: 1.3rem 2.5rem 1.2rem;
+		padding: 1.3rem 1.5rem 1.2rem;
 		font-weight: 600;
+
+		@include media-lg {
+			padding: 1.3rem 2.5rem 1.2rem;
+		}
 	}
 
 	a {
