--- a/themes/habitat/layouts/_default/machine.html
+++ b/themes/habitat/layouts/_default/machine.html
@@ -4,9 +4,14 @@
 		<a href="../">&larr; Schreinerei</a>
 	</nav>
 
+
 	{{- with .Params.stage }}
 	<figure class="stage t-machine__stage">
 		<img src="{{ .src }}" alt="{{ .alt }}" width="{{ .width }}" height="{{ .height }}">
+	</figure>
+	{{ else }}
+	<figure class="stage t-machine__stage">
+		<img src="/placeholder.svg" alt="" width="1000" height="750">
 	</figure>
 	{{- end }}
 
