--- a/themes/habitat/assets/styles/plex-sans/bold/italic/_latin3.scss
+++ b/themes/habitat/assets/styles/plex-sans/bold/italic/_latin3.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: italic;
 	font-weight: 700;
 	src: local("IBM Plex Sans Bold Italic"), local("IBMPlexSans-BoldItalic"),
