--- a/themes/habitat/assets/styles/plex-sans/extralight/_pi.scss
+++ b/themes/habitat/assets/styles/plex-sans/extralight/_pi.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: normal;
 	font-weight: 200;
 	src: local("IBM Plex Sans ExtraLight"), local("IBMPlexSans-ExtraLight"),
