--- a/themes/habitat/assets/styles/plex-sans/extralight/italic/_latin1.scss
+++ b/themes/habitat/assets/styles/plex-sans/extralight/italic/_latin1.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: italic;
 	font-weight: 200;
 	src: local("IBM Plex Sans ExtraLight Italic"), local("IBMPlexSans-ExtraLightItalic"),
