--- a/themes/habitat/assets/styles/plex-sans/light/_greek.scss
+++ b/themes/habitat/assets/styles/plex-sans/light/_greek.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: normal;
 	font-weight: 300;
 	src: local("IBM Plex Sans Light"), local("IBMPlexSans-Light"),
