--- a/themes/habitat/assets/styles/plex-sans/light/italic/_pi.scss
+++ b/themes/habitat/assets/styles/plex-sans/light/italic/_pi.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: italic;
 	font-weight: 300;
 	src: local("IBM Plex Sans Light Italic"), local("IBMPlexSans-LightItalic"),
