--- a/themes/habitat/assets/styles/plex-sans/medium/italic/_latin3.scss
+++ b/themes/habitat/assets/styles/plex-sans/medium/italic/_latin3.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: italic;
 	font-weight: 500;
 	src: local("IBM Plex Sans Medium Italic"), local("IBMPlexSans-MediumItalic"),
