--- a/themes/habitat/assets/styles/plex-sans/semibold/_latin3.scss
+++ b/themes/habitat/assets/styles/plex-sans/semibold/_latin3.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: normal;
 	font-weight: 600;
 	src: local("IBM Plex Sans SemiBold"), local("IBMPlexSans-SemiBold"),
