--- a/themes/habitat/assets/styles/plex-sans/semibold/italic/_latin1.scss
+++ b/themes/habitat/assets/styles/plex-sans/semibold/italic/_latin1.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: italic;
 	font-weight: 600;
 	src: local("IBM Plex Sans SemiBold Italic"), local("IBMPlexSans-SemiBoldItalic"),
