--- a/themes/habitat/assets/styles/plex-sans/text/_cyrillic.scss
+++ b/themes/habitat/assets/styles/plex-sans/text/_cyrillic.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: normal;
 	font-weight: 450;
 	src: local("IBM Plex Sans Text"), local("IBMPlexSans-Text"),
