--- a/themes/habitat/assets/styles/plex-sans/thin/_latin2.scss
+++ b/themes/habitat/assets/styles/plex-sans/thin/_latin2.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: normal;
 	font-weight: 100;
 	src: local("IBM Plex Sans Thin"), local("IBMPlexSans-Thin"),
