--- a/themes/habitat/assets/styles/plex-sans/thin/italic/_greek.scss
+++ b/themes/habitat/assets/styles/plex-sans/thin/italic/_greek.scss
@@ -1,5 +1,6 @@
 @font-face {
 	font-family: "IBM Plex Sans Web";
+	font-display: swap;
 	font-style: italic;
 	font-weight: 100;
 	src: local("IBM Plex Sans Thin Italic"), local("IBMPlexSans-ThinItalic"),
