--- a/themes/habitat/layouts/_default/baseof.html
+++ b/themes/habitat/layouts/_default/baseof.html
@@ -1,35 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>{{ .Params.Title  }}{{ if .Params.Title }} | {{ end }}{{ .Site.Title }}</title>
-		<link rel="stylesheet" href="/assets{{ if eq (getenv "APP_ENV") "dev" }}/main.css{{ else }}{{ index .Site.Data.manifest "main.css" | relURL }}{{ end }}">
-		<link rel="canonical" href="{{ .Permalink }}"/>
-
-		{{- if(.Params.meta_keywords) -}}
-			<meta name="keywords" content="{{ delimit .Params.meta_keywords ", " }}">
-		{{- end }}
-		<meta name="description" content="{{ .Params.meta_description }}">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:site_name" content="{{ .Site.Title }}">
-		<meta property="og:title" content="{{ .Params.Title }}">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="{{ .Permalink }}">
-		{{ if .Params.meta_image }}
-			<meta property="og:image" content="{{ .Params.meta_image }}">
-		{{- end -}}
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="{{ .Params.Title }}">
-		<meta name="twitter:description" content="{{ .Params.meta_description }}">
-		<meta name="twitter:domain" content="{{ .Site.BaseURL }}">
-		{{- if .Params.meta_image -}}
-			<meta name="twitter:image" content="{{ .Params.meta_image }}">
-		{{- end -}}
-
-		{{ if not (eq (getenv "APP_ENV") "dev") }}
-		<script type="text/javascript">var _paq = window._paq || []; _paq.push(['disableCookies']); _paq.push(['trackPageView']); _paq.push(['enableLinkTracking']); (function() { var u="https://statistik.das-habitat.de/"; _paq.push(['setTrackerUrl', u+'matomo.php']); _paq.push(['setSiteId', '1']); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s); })();</script>
-		{{- end }}
-	</head>
+	{{- partial "head.html" . -}}
 	<body>
 		<div class="site">
 		{{- partial "header.html" . -}}
