--- a/themes/habitat/assets/styles/_grid.scss
+++ b/themes/habitat/assets/styles/_grid.scss
@@ -3,7 +3,7 @@
 
 	* + & {
 		@include media-lg {
-			margin-top: calc(2 * var(--offset-vertical));
+			margin-top: var(--offset-vertical-2);
 		}
 	}
 
