--- a/themes/habitat/assets/styles/_typography.scss
+++ b/themes/habitat/assets/styles/_typography.scss
@@ -39,7 +39,7 @@ h2,
 	margin-bottom: 1rem;
 
 	* + & {
-		margin-top: calc(2 * var(--offset-vertical));
+		margin-top: var(--offset-vertical-2);
 	}
 }
 
