--- a/themes/habitat/assets/styles/partials/_nav.scss
+++ b/themes/habitat/assets/styles/partials/_nav.scss
@@ -17,7 +17,7 @@
 }
 
 .nav--paginate {
-	margin-top: calc(3 * var(--offset-vertical));
+	margin-top: var(--offset-vertical-3);
 
 	a {
 		display: block;
