--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -13,7 +13,7 @@
 
 		<nav>
 			<div>
-				<h3><a href="/">Werkstätten</a></h3>
+				<h3>Werkstätten</h3>
 				<ul>
 					<li>
 						<a href="/bueros/">Büros</a>
@@ -27,8 +27,22 @@
 				</ul>
 			</div>
 			<div>
-				<h3><a href="/ueber-uns/">Über uns</a></h3>
+				<h3>Events</h3>
 				<ul>
+					<li>
+						<a href="/repaircafe/">Repair-Café</a>
+					</li>
+				</ul>
+			</div>
+			<div>
+				<h3>Informationen</h3>
+				<ul>
+					<li>
+						<a href="/ueber-uns/">Über uns</a>
+					</li>
+					<li>
+						<a href="/preise/">Preise &amp; Angebot</a>
+					</li>
 					<li>
 						<a href="/kontakt">Kontakt &amp; Anfahrt</a>
 					</li>
