Mark images in features as presentational only

--- a/themes/habitat/layouts/shortcodes/feature.html
+++ b/themes/habitat/layouts/shortcodes/feature.html
@@ -8,7 +8,7 @@
 	</h2>
 
 	<div class="feature__content">
-		<a href="{{ $href }}" class="feature__img">
+		<a href="{{ $href }}" class="feature__img" role="presentation">
 			<img src="{{ .Get "src" }}" alt="" width="{{ .Get "width" }}" height="{{ .Get "height" }}">
 		</a>
 
