Corrections via Ralf

--- a/themes/habitat/layouts/partials/contact.html
+++ b/themes/habitat/layouts/partials/contact.html
@@ -2,13 +2,13 @@
 	<h3 class="aux">Öffnungszeiten</h3>
 	<p>
 		Freitag &amp; Samstag: 15&ndash;21:00 Uhr<br>
-		Sonntags: 11&ndash;17:00 Uhr
+		Sonntag: 11&ndash;17:00 Uhr
 	</p>
 
 	<p>
 		Das Habitat Augsburg e.V.<br>
-		Eberlestraße 29, Gebäude D1<br>
-		86157 Augsburg
+		<a href="https://www.openstreetmap.org/way/707420374#map=18/48.36769/10.87144" target="_blank" rel="noopener">Eberlestraße 29, Gebäude D1<br>
+		86157 Augsburg</a>
 	</p>
 	<p>
 		<a href="mailto:kontakt@das-habitat.de">kontakt@das-habitat.de</a><br>
