Content updates via Julian

--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -24,6 +24,9 @@
 					<li>
 						<a href="/schlosserei/">Schlosserei</a>
 					</li>
+					<li>
+						<a href="/siebdruck/">Siebdruck</a>
+					</li>
 				</ul>
 			</div>
 			<div>
