--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -56,7 +56,7 @@
 
 	<aside class="footer__sponsors">
 		<div class="footer__inner">
-			<h3>Unsere Sponsoren, Unterstützer, Stifter, Gönner und einfach fantatischen Partner.</h3>
+			<h3>Unsere Sponsoren, Unterstützer, Stifter, Gönner und einfach fantastischen Partner.</h3>
 
 			<ul class="sponsors">
 				{{- range (shuffle .Site.Data.sponsoren) }}
