--- a/themes/habitat/layouts/404.html
+++ b/themes/habitat/layouts/404.html
@@ -1,1 +1,7 @@
-<h1>404</h1>
+<h1>404 Seite nicht gefunden</h1>
+
+<p>Hoppla der Link war wohl falsch, wir leiten Dich einfach auf die <a href="/">Startseite</a> weiter</p>
+
+<script>
+	window.location.href = '/'
+</script>
