Remove non-renderable character

--- a/themes/habitat/layouts/_default/baseof.html
+++ b/themes/habitat/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 	<body>
 		<div class="anniversary">
 			<h2>Das Habitat 1st Anniversary &amp; Stage 2 Opening Party</h2>
-			<h3>30. November 2019 ab 18:00 Uhr. Ab 21:00 StayFM Tanzaudienz. Eintritt frei!</h3>
+			<h3>30. November 2019 ab 18:00 Uhr. Ab 21:00 StayFM Tanzaudienz. Eintritt frei!</h3>
 			<p>Wir feiern einjähriges Bestehen der größten offenen Werkstatt in Augsburg und Umgebung mit der Einweihung unserer neuen Werkstätten und Büros. Ihr seid alle eingeladen!</p>
 			<p>Wir zeigen euch was wir im letzten Jahr geschafft haben, was noch vor uns liegt und wie wir das mit euerer Hilfe schaffen werden. Danach starten wir mit den DJs von Radio StayFM in die nächste Runde.</p>
 			<p>Ab 21:00 Uhr: Radio StayFM Tanzaudienz mit Markus Hofko (moons of jupiter), Marlene Roi (loni&loni / von hinterm Mond), David Gold (spacenight) und Daniel Fibrile (das feuerrote Soundmobil)</p>
