--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -93,7 +93,7 @@
 			</p>
 
 			<p class="footer__legal">
-				<a href="/kontakt#kontoverbindung"></a>
+				<a href="/kontakt#kontoverbindung">Kontoverbindung</a>
 				<a href="/impressum/">Impressum</a>
 				<a href="/datenschutz/"
 					>{{ with .Site.GetPage "/datenschutz" }}{{ .Title }}{{ end }}</a
