Add code to handle announcements

--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -25,6 +25,7 @@
 @import 'elements/table';
 
 // Partials
+@import 'partials/announcement';
 @import 'partials/box';
 @import 'partials/claim';
 @import 'partials/contact';
