--- a/themes/habitat/layouts/partials/header.html
+++ b/themes/habitat/layouts/partials/header.html
@@ -1,3 +1,5 @@
+{{- partial "announcement.html" (dict "context" .)}}
+
 <header id="top" class="header{{ if .IsHome }} header--home{{ end }}">
 	<a href="/" class="header__logo"><img src="/assets/ui/logo.svg" alt="Das Habitat" width="207" height="80"></a>
 
