--- a/themes/habitat/layouts/partials/header.html
+++ b/themes/habitat/layouts/partials/header.html
@@ -1,14 +1,19 @@
 {{- partial "announcement.html" (dict "context" .)}}
 
 <header id="top" class="header{{ if .IsHome }} header--home{{ end }}">
-	<a href="/" class="header__logo"><img src="/assets/ui/logo.svg" alt="Das Habitat" width="207" height="80"></a>
+	<a href="/" class="header__logo"
+		><img src="/assets/ui/logo.svg" alt="Das Habitat" width="207" height="80"
+	/></a>
 
 	<nav id="nav" class="header__nav">
 		<ul role="menubar">
-			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "workshops" "title" "Werkstätten") }}
-			{{- partial "menu-items.html" (dict "context" . "from" 0 "to" 399) }}
-			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "events" "title" "Kurse & Veranstaltungen") }}
-			{{- partial "menu-items.html" (dict "context" . "from" 400 "to" 9999) }}
+			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "workshops" "title"
+			"Werkstätten") }} {{- partial "menu-items.html" (dict "context" . "from" 0 "to" 399) }}
+			{{- partial "menu-item-dropdown.html" (dict "context" . "menu" "events" "title" "Kurse &
+			Veranstaltungen") }} {{- partial "menu-items.html" (dict "context" . "from" 400 "to"
+			9999) }}
+			<!-- {{- partial "menu-item-dropdown.html" (dict "context" . "menu" "events" "title" "Veranstaltungen") }}
+			{{- partial "menu-items.html" (dict "context" . "from" 400 "to" 3999) }} -->
 		</ul>
 	</nav>
 </header>
